# diplo-mod-2

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Entrenamiento.ipynb  README.md  conceptos_exposicion.md  conclusions.md  conclusions_LJ.md  conclusions_MM.md  generate_ppt.py  mmiro_ship_detection_local_colab_v3.ipynb  presentacion_ship_detection.pptx  pyproject.toml  satellite_ship_crop_auto.ipynb  ship_detection_local.ipynb  ship_detection_local_colab_v3.ipynb  ship_detection_local_v2.ipynb  ship_detection_local_v3.ipynb  ship_detection_local_v4.ipynb  ship_detection_satellite_yolo11_example.ipynb  train_yolo11_object_detection_on_custom_dataset_example.ipynb
src/diplo_mod_2/: classifier.py  detection.py  visualization.py
