[project]
name = "diplo-mod-2"
version = "0.1.0"
description = "Computer Vision TP AI Diplo Module 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "kaggle",
    "tqdm",
    "ultralytics<=8.3.40",
    "supervision",
    "roboflow",
    "inference",
    "numpy",
    "matplotlib",
    "Pillow",
    "scikit-learn",
    "opencv-python",
    "ipywidgets",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff",
    "pytest",
    "nbmake",
    "nbqa",
    "mypy",
    "pre-commit",
    "poethepoet",
    "pytest-cov>=7.1.0",    
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diplo_mod_2"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["diplo_mod_2"]
branch = true
omit = ["*/domain/predictor.py"]

[tool.poe.tasks]
lint = { shell = "ruff check . && ruff format --check ." }
fmt = "ruff format ."
typecheck = { shell = "mypy src && nbqa mypy satellite_ship_pipeline.ipynb ship_detection_local.ipynb ship_detection_local_v2.ipynb" }
test = "pytest tests/ --cov --cov-report=term-missing"
nbtest = "pytest --nbmake notebooks"
check = ["lint", "typecheck"]
precommit = "uv run pre-commit run --all-files --verbose"
precommit-update = "uv run pre-commit run --hook-stage manual pre-commit-update"

